commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43087,6 +43087,10 @@
     {
       "Date": "2022-10-05 13:00",
       "Rate": "20.0610"
+    },
+    {
+      "Date": "2022-10-05 14:00",
+      "Rate": "20.0657"
     }
   ]
 }
