commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43091,6 +43091,10 @@
     {
       "Date": "2022-10-05 14:00",
       "Rate": "20.0657"
+    },
+    {
+      "Date": "2022-10-05 15:00",
+      "Rate": "20.0736"
     }
   ]
 }
