commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43095,6 +43095,10 @@
     {
       "Date": "2022-10-05 15:00",
       "Rate": "20.0736"
+    },
+    {
+      "Date": "2022-10-05 16:00",
+      "Rate": "20.0668"
     }
   ]
 }
