commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43099,6 +43099,10 @@
     {
       "Date": "2022-10-05 16:00",
       "Rate": "20.0668"
+    },
+    {
+      "Date": "2022-10-05 17:00",
+      "Rate": "20.0507"
     }
   ]
 }
