commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43103,6 +43103,10 @@
     {
       "Date": "2022-10-05 17:00",
       "Rate": "20.0507"
+    },
+    {
+      "Date": "2022-10-05 18:00",
+      "Rate": "20.0394"
     }
   ]
 }
