commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43107,6 +43107,10 @@
     {
       "Date": "2022-10-05 18:00",
       "Rate": "20.0394"
+    },
+    {
+      "Date": "2022-10-05 19:00",
+      "Rate": "20.0581"
     }
   ]
 }
