commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43111,6 +43111,10 @@
     {
       "Date": "2022-10-05 19:00",
       "Rate": "20.0581"
+    },
+    {
+      "Date": "2022-10-05 20:00",
+      "Rate": "20.0475"
     }
   ]
 }
