commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43115,6 +43115,10 @@
     {
       "Date": "2022-10-05 20:00",
       "Rate": "20.0475"
+    },
+    {
+      "Date": "2022-10-05 21:00",
+      "Rate": "20.0387"
     }
   ]
 }
