commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43119,6 +43119,10 @@
     {
       "Date": "2022-10-05 21:00",
       "Rate": "20.0387"
+    },
+    {
+      "Date": "2022-10-05 22:00",
+      "Rate": "20.0340"
     }
   ]
 }
