--- a/indexRt.html
+++ b/indexRt.html
@@ -43123,6 +43123,10 @@
     {
       "Date": "2022-10-05 22:00",
       "Rate": "20.0340"
+    },
+    {
+      "Date": "2022-10-05 23:00",
+      "Rate": "20.0301"
     }
   ]
 }
