commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43127,6 +43127,10 @@
     {
       "Date": "2022-10-05 23:00",
       "Rate": "20.0301"
+    },
+    {
+      "Date": "2022-10-06 00:00",
+      "Rate": "20.0924"
     }
   ]
 }
