commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43131,6 +43131,10 @@
     {
       "Date": "2022-10-06 00:00",
       "Rate": "20.0924"
+    },
+    {
+      "Date": "2022-10-06 01:00",
+      "Rate": "20.0483"
     }
   ]
 }
