commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43135,6 +43135,10 @@
     {
       "Date": "2022-10-06 01:00",
       "Rate": "20.0483"
+    },
+    {
+      "Date": "2022-10-06 02:00",
+      "Rate": "20.0821"
     }
   ]
 }
