commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43139,6 +43139,10 @@
     {
       "Date": "2022-10-06 02:00",
       "Rate": "20.0821"
+    },
+    {
+      "Date": "2022-10-06 03:00",
+      "Rate": "20.0857"
     }
   ]
 }
