commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43143,6 +43143,10 @@
     {
       "Date": "2022-10-06 03:00",
       "Rate": "20.0857"
+    },
+    {
+      "Date": "2022-10-06 04:00",
+      "Rate": "20.0910"
     }
   ]
 }
