commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43147,6 +43147,10 @@
     {
       "Date": "2022-10-06 04:00",
       "Rate": "20.0910"
+    },
+    {
+      "Date": "2022-10-06 05:00",
+      "Rate": "20.0988"
     }
   ]
 }
