--- a/indexRt.html
+++ b/indexRt.html
@@ -43151,6 +43151,10 @@
     {
       "Date": "2022-10-06 05:00",
       "Rate": "20.0988"
+    },
+    {
+      "Date": "2022-10-06 06:00",
+      "Rate": "20.1039"
     }
   ]
 }
