commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43155,6 +43155,10 @@
     {
       "Date": "2022-10-06 06:00",
       "Rate": "20.1039"
+    },
+    {
+      "Date": "2022-10-06 07:00",
+      "Rate": "20.1213"
     }
   ]
 }
