--- a/indexRt.html
+++ b/indexRt.html
@@ -43159,6 +43159,10 @@
     {
       "Date": "2022-10-06 07:00",
       "Rate": "20.1213"
+    },
+    {
+      "Date": "2022-10-06 08:00",
+      "Rate": "20.0858"
     }
   ]
 }
