commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43163,6 +43163,10 @@
     {
       "Date": "2022-10-06 08:00",
       "Rate": "20.0858"
+    },
+    {
+      "Date": "2022-10-06 09:00",
+      "Rate": "20.1131"
     }
   ]
 }
