--- a/indexRt.html
+++ b/indexRt.html
@@ -43167,6 +43167,10 @@
     {
       "Date": "2022-10-06 09:00",
       "Rate": "20.1131"
+    },
+    {
+      "Date": "2022-10-06 10:00",
+      "Rate": "20.1157"
     }
   ]
 }
