commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43171,6 +43171,10 @@
     {
       "Date": "2022-10-06 10:00",
       "Rate": "20.1157"
+    },
+    {
+      "Date": "2022-10-06 11:00",
+      "Rate": "20.0974"
     }
   ]
 }
