commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43175,6 +43175,10 @@
     {
       "Date": "2022-10-06 11:00",
       "Rate": "20.0974"
+    },
+    {
+      "Date": "2022-10-06 12:00",
+      "Rate": "20.1302"
     }
   ]
 }
