commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43179,6 +43179,10 @@
     {
       "Date": "2022-10-06 12:00",
       "Rate": "20.1302"
+    },
+    {
+      "Date": "2022-10-06 13:00",
+      "Rate": "20.1281"
     }
   ]
 }
