--- a/indexRt.html
+++ b/indexRt.html
@@ -43183,6 +43183,10 @@
     {
       "Date": "2022-10-06 13:00",
       "Rate": "20.1281"
+    },
+    {
+      "Date": "2022-10-06 14:00",
+      "Rate": "20.1254"
     }
   ]
 }
