--- a/indexRt.html
+++ b/indexRt.html
@@ -43187,6 +43187,10 @@
     {
       "Date": "2022-10-06 14:00",
       "Rate": "20.1254"
+    },
+    {
+      "Date": "2022-10-06 15:00",
+      "Rate": "20.1259"
     }
   ]
 }
