commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43191,6 +43191,10 @@
     {
       "Date": "2022-10-06 15:00",
       "Rate": "20.1259"
+    },
+    {
+      "Date": "2022-10-06 16:00",
+      "Rate": "20.1206"
     }
   ]
 }
