commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43195,6 +43195,10 @@
     {
       "Date": "2022-10-06 16:00",
       "Rate": "20.1206"
+    },
+    {
+      "Date": "2022-10-06 17:00",
+      "Rate": "20.1164"
     }
   ]
 }
