commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43199,6 +43199,10 @@
     {
       "Date": "2022-10-06 17:00",
       "Rate": "20.1164"
+    },
+    {
+      "Date": "2022-10-06 18:00",
+      "Rate": "20.1069"
     }
   ]
 }
