commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43203,6 +43203,10 @@
     {
       "Date": "2022-10-06 18:00",
       "Rate": "20.1069"
+    },
+    {
+      "Date": "2022-10-06 19:00",
+      "Rate": "20.0934"
     }
   ]
 }
