--- a/indexRt.html
+++ b/indexRt.html
@@ -43207,6 +43207,10 @@
     {
       "Date": "2022-10-06 19:00",
       "Rate": "20.0934"
+    },
+    {
+      "Date": "2022-10-06 20:00",
+      "Rate": "20.0885"
     }
   ]
 }
