commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43211,6 +43211,10 @@
     {
       "Date": "2022-10-06 20:00",
       "Rate": "20.0885"
+    },
+    {
+      "Date": "2022-10-06 21:00",
+      "Rate": "20.0971"
     }
   ]
 }
