commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43215,6 +43215,10 @@
     {
       "Date": "2022-10-06 21:00",
       "Rate": "20.0971"
+    },
+    {
+      "Date": "2022-10-06 22:00",
+      "Rate": "20.1089"
     }
   ]
 }
