commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43219,6 +43219,10 @@
     {
       "Date": "2022-10-06 22:00",
       "Rate": "20.1089"
+    },
+    {
+      "Date": "2022-10-06 23:00",
+      "Rate": "20.0907"
     }
   ]
 }
