commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43223,6 +43223,10 @@
     {
       "Date": "2022-10-06 23:00",
       "Rate": "20.0907"
+    },
+    {
+      "Date": "2022-10-07 00:00",
+      "Rate": "20.0984"
     }
   ]
 }
