--- a/indexRt.html
+++ b/indexRt.html
@@ -43227,6 +43227,10 @@
     {
       "Date": "2022-10-07 00:00",
       "Rate": "20.0984"
+    },
+    {
+      "Date": "2022-10-07 01:00",
+      "Rate": "20.0659"
     }
   ]
 }
