commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43231,6 +43231,10 @@
     {
       "Date": "2022-10-07 01:00",
       "Rate": "20.0659"
+    },
+    {
+      "Date": "2022-10-07 02:00",
+      "Rate": "20.0596"
     }
   ]
 }
