commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43235,6 +43235,10 @@
     {
       "Date": "2022-10-07 02:00",
       "Rate": "20.0596"
+    },
+    {
+      "Date": "2022-10-07 03:00",
+      "Rate": "20.0408"
     }
   ]
 }
