commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43239,6 +43239,10 @@
     {
       "Date": "2022-10-07 03:00",
       "Rate": "20.0408"
+    },
+    {
+      "Date": "2022-10-07 04:00",
+      "Rate": "20.0559"
     }
   ]
 }
