commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43243,6 +43243,10 @@
     {
       "Date": "2022-10-07 04:00",
       "Rate": "20.0559"
+    },
+    {
+      "Date": "2022-10-07 05:00",
+      "Rate": "20.0690"
     }
   ]
 }
