--- a/indexRt.html
+++ b/indexRt.html
@@ -43247,6 +43247,10 @@
     {
       "Date": "2022-10-07 05:00",
       "Rate": "20.0690"
+    },
+    {
+      "Date": "2022-10-07 06:00",
+      "Rate": "20.0827"
     }
   ]
 }
