--- a/indexRt.html
+++ b/indexRt.html
@@ -43251,6 +43251,10 @@
     {
       "Date": "2022-10-07 06:00",
       "Rate": "20.0827"
+    },
+    {
+      "Date": "2022-10-07 08:00",
+      "Rate": "20.0363"
     }
   ]
 }
