--- a/indexRt.html
+++ b/indexRt.html
@@ -43255,6 +43255,10 @@
     {
       "Date": "2022-10-07 08:00",
       "Rate": "20.0363"
+    },
+    {
+      "Date": "2022-10-07 09:00",
+      "Rate": "20.0326"
     }
   ]
 }
