--- a/indexRt.html
+++ b/indexRt.html
@@ -43259,6 +43259,10 @@
     {
       "Date": "2022-10-07 09:00",
       "Rate": "20.0326"
+    },
+    {
+      "Date": "2022-10-07 10:00",
+      "Rate": "20.0199"
     }
   ]
 }
