--- a/indexRt.html
+++ b/indexRt.html
@@ -43263,6 +43263,10 @@
     {
       "Date": "2022-10-07 10:00",
       "Rate": "20.0199"
+    },
+    {
+      "Date": "2022-10-07 11:00",
+      "Rate": "20.0068"
     }
   ]
 }
