commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43267,6 +43267,10 @@
     {
       "Date": "2022-10-07 11:00",
       "Rate": "20.0068"
+    },
+    {
+      "Date": "2022-10-07 12:00",
+      "Rate": "20.0304"
     }
   ]
 }
