--- a/indexRt.html
+++ b/indexRt.html
@@ -43271,6 +43271,10 @@
     {
       "Date": "2022-10-07 12:00",
       "Rate": "20.0304"
+    },
+    {
+      "Date": "2022-10-07 13:00",
+      "Rate": "20.0581"
     }
   ]
 }
