commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43275,6 +43275,10 @@
     {
       "Date": "2022-10-07 13:00",
       "Rate": "20.0581"
+    },
+    {
+      "Date": "2022-10-07 14:00",
+      "Rate": "20.0422"
     }
   ]
 }
