--- a/indexRt.html
+++ b/indexRt.html
@@ -43279,6 +43279,10 @@
     {
       "Date": "2022-10-07 14:00",
       "Rate": "20.0422"
+    },
+    {
+      "Date": "2022-10-07 15:00",
+      "Rate": "20.0385"
     }
   ]
 }
