--- a/indexRt.html
+++ b/indexRt.html
@@ -43283,6 +43283,10 @@
     {
       "Date": "2022-10-07 15:00",
       "Rate": "20.0385"
+    },
+    {
+      "Date": "2022-10-07 16:00",
+      "Rate": "20.0385"
     }
   ]
 }
