commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43287,6 +43287,10 @@
     {
       "Date": "2022-10-07 16:00",
       "Rate": "20.0385"
+    },
+    {
+      "Date": "2022-10-10 08:00",
+      "Rate": "19.9734"
     }
   ]
 }
