--- a/indexRt.html
+++ b/indexRt.html
@@ -43291,6 +43291,10 @@
     {
       "Date": "2022-10-10 08:00",
       "Rate": "19.9734"
+    },
+    {
+      "Date": "2022-10-10 09:00",
+      "Rate": "19.9759"
     }
   ]
 }
