--- a/indexRt.html
+++ b/indexRt.html
@@ -43295,6 +43295,10 @@
     {
       "Date": "2022-10-10 09:00",
       "Rate": "19.9759"
+    },
+    {
+      "Date": "2022-10-10 10:00",
+      "Rate": "19.9791"
     }
   ]
 }
