--- a/indexRt.html
+++ b/indexRt.html
@@ -43299,6 +43299,10 @@
     {
       "Date": "2022-10-10 10:00",
       "Rate": "19.9791"
+    },
+    {
+      "Date": "2022-10-10 11:00",
+      "Rate": "19.9678"
     }
   ]
 }
