commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43303,6 +43303,10 @@
     {
       "Date": "2022-10-10 11:00",
       "Rate": "19.9678"
+    },
+    {
+      "Date": "2022-10-10 12:00",
+      "Rate": "19.9755"
     }
   ]
 }
