commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43307,6 +43307,10 @@
     {
       "Date": "2022-10-10 12:00",
       "Rate": "19.9755"
+    },
+    {
+      "Date": "2022-10-10 13:00",
+      "Rate": "19.9632"
     }
   ]
 }
