commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43311,6 +43311,10 @@
     {
       "Date": "2022-10-10 13:00",
       "Rate": "19.9632"
+    },
+    {
+      "Date": "2022-10-10 14:00",
+      "Rate": "19.9637"
     }
   ]
 }
