commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43315,6 +43315,10 @@
     {
       "Date": "2022-10-10 14:00",
       "Rate": "19.9637"
+    },
+    {
+      "Date": "2022-10-10 15:00",
+      "Rate": "19.9774"
     }
   ]
 }
