commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43319,6 +43319,10 @@
     {
       "Date": "2022-10-10 15:00",
       "Rate": "19.9774"
+    },
+    {
+      "Date": "2022-10-10 16:00",
+      "Rate": "19.9585"
     }
   ]
 }
