commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43323,6 +43323,10 @@
     {
       "Date": "2022-10-10 16:00",
       "Rate": "19.9585"
+    },
+    {
+      "Date": "2022-10-10 17:00",
+      "Rate": "19.9550"
     }
   ]
 }
