commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43327,6 +43327,10 @@
     {
       "Date": "2022-10-10 17:00",
       "Rate": "19.9550"
+    },
+    {
+      "Date": "2022-10-11 08:00",
+      "Rate": "20.0082"
     }
   ]
 }
