commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43331,6 +43331,10 @@
     {
       "Date": "2022-10-11 08:00",
       "Rate": "20.0082"
+    },
+    {
+      "Date": "2022-10-11 09:00",
+      "Rate": "19.9482"
     }
   ]
 }
