commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43335,6 +43335,10 @@
     {
       "Date": "2022-10-11 09:00",
       "Rate": "19.9482"
+    },
+    {
+      "Date": "2022-10-11 10:00",
+      "Rate": "19.9791"
     }
   ]
 }
