commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43339,6 +43339,10 @@
     {
       "Date": "2022-10-11 10:00",
       "Rate": "19.9791"
+    },
+    {
+      "Date": "2022-10-11 11:00",
+      "Rate": "20.0189"
     }
   ]
 }
