commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43343,6 +43343,10 @@
     {
       "Date": "2022-10-11 11:00",
       "Rate": "20.0189"
+    },
+    {
+      "Date": "2022-10-11 12:00",
+      "Rate": "20.1041"
     }
   ]
 }
