commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43347,6 +43347,10 @@
     {
       "Date": "2022-10-11 12:00",
       "Rate": "20.1041"
+    },
+    {
+      "Date": "2022-10-11 13:00",
+      "Rate": "20.0805"
     }
   ]
 }
