commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43351,6 +43351,10 @@
     {
       "Date": "2022-10-11 13:00",
       "Rate": "20.0805"
+    },
+    {
+      "Date": "2022-10-11 14:00",
+      "Rate": "20.0811"
     }
   ]
 }
