commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43355,6 +43355,10 @@
     {
       "Date": "2022-10-11 14:00",
       "Rate": "20.0811"
+    },
+    {
+      "Date": "2022-10-11 15:00",
+      "Rate": "20.0781"
     }
   ]
 }
