commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43359,6 +43359,10 @@
     {
       "Date": "2022-10-11 15:00",
       "Rate": "20.0781"
+    },
+    {
+      "Date": "2022-10-11 16:00",
+      "Rate": "20.0661"
     }
   ]
 }
