commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43363,6 +43363,10 @@
     {
       "Date": "2022-10-11 16:00",
       "Rate": "20.0661"
+    },
+    {
+      "Date": "2022-10-11 17:00",
+      "Rate": "20.0680"
     }
   ]
 }
