commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43367,6 +43367,10 @@
     {
       "Date": "2022-10-11 17:00",
       "Rate": "20.0680"
+    },
+    {
+      "Date": "2022-10-11 18:00",
+      "Rate": "20.0618"
     }
   ]
 }
