commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43371,6 +43371,10 @@
     {
       "Date": "2022-10-11 18:00",
       "Rate": "20.0618"
+    },
+    {
+      "Date": "2022-10-11 19:00",
+      "Rate": "20.0860"
     }
   ]
 }
