--- a/indexRt.html
+++ b/indexRt.html
@@ -43375,6 +43375,10 @@
     {
       "Date": "2022-10-11 19:00",
       "Rate": "20.0860"
+    },
+    {
+      "Date": "2022-10-12 06:00",
+      "Rate": "20.0568"
     }
   ]
 }
