commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43379,6 +43379,10 @@
     {
       "Date": "2022-10-12 06:00",
       "Rate": "20.0568"
+    },
+    {
+      "Date": "2022-10-12 07:00",
+      "Rate": "20.0628"
     }
   ]
 }
