commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43383,6 +43383,10 @@
     {
       "Date": "2022-10-12 07:00",
       "Rate": "20.0628"
+    },
+    {
+      "Date": "2022-10-12 08:00",
+      "Rate": "20.0355"
     }
   ]
 }
