--- a/indexRt.html
+++ b/indexRt.html
@@ -43387,6 +43387,10 @@
     {
       "Date": "2022-10-12 08:00",
       "Rate": "20.0355"
+    },
+    {
+      "Date": "2022-10-12 09:00",
+      "Rate": "20.0261"
     }
   ]
 }
