--- a/indexRt.html
+++ b/indexRt.html
@@ -43391,6 +43391,10 @@
     {
       "Date": "2022-10-12 09:00",
       "Rate": "20.0261"
+    },
+    {
+      "Date": "2022-10-12 10:00",
+      "Rate": "20.0246"
     }
   ]
 }
