--- a/indexRt.html
+++ b/indexRt.html
@@ -43395,6 +43395,10 @@
     {
       "Date": "2022-10-12 10:00",
       "Rate": "20.0246"
+    },
+    {
+      "Date": "2022-10-12 11:00",
+      "Rate": "20.0080"
     }
   ]
 }
