commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43399,6 +43399,10 @@
     {
       "Date": "2022-10-12 11:00",
       "Rate": "20.0080"
+    },
+    {
+      "Date": "2022-10-12 12:00",
+      "Rate": "20.0082"
     }
   ]
 }
