commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43403,6 +43403,10 @@
     {
       "Date": "2022-10-12 12:00",
       "Rate": "20.0082"
+    },
+    {
+      "Date": "2022-10-12 13:00",
+      "Rate": "19.9857"
     }
   ]
 }
