--- a/indexRt.html
+++ b/indexRt.html
@@ -43407,6 +43407,10 @@
     {
       "Date": "2022-10-12 13:00",
       "Rate": "19.9857"
+    },
+    {
+      "Date": "2022-10-12 14:00",
+      "Rate": "19.9879"
     }
   ]
 }
