commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43411,6 +43411,10 @@
     {
       "Date": "2022-10-12 14:00",
       "Rate": "19.9879"
+    },
+    {
+      "Date": "2022-10-12 15:00",
+      "Rate": "19.9932"
     }
   ]
 }
