--- a/indexRt.html
+++ b/indexRt.html
@@ -43415,6 +43415,10 @@
     {
       "Date": "2022-10-12 15:00",
       "Rate": "19.9932"
+    },
+    {
+      "Date": "2022-10-12 16:00",
+      "Rate": "19.9930"
     }
   ]
 }
