commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43419,6 +43419,10 @@
     {
       "Date": "2022-10-12 16:00",
       "Rate": "19.9930"
+    },
+    {
+      "Date": "2022-10-12 17:00",
+      "Rate": "19.9933"
     }
   ]
 }
