commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43423,6 +43423,10 @@
     {
       "Date": "2022-10-12 17:00",
       "Rate": "19.9933"
+    },
+    {
+      "Date": "2022-10-12 18:00",
+      "Rate": "19.9883"
     }
   ]
 }
