--- a/indexRt.html
+++ b/indexRt.html
@@ -43427,6 +43427,10 @@
     {
       "Date": "2022-10-12 18:00",
       "Rate": "19.9883"
+    },
+    {
+      "Date": "2022-10-12 19:00",
+      "Rate": "19.9862"
     }
   ]
 }
