--- a/indexRt.html
+++ b/indexRt.html
@@ -43431,6 +43431,10 @@
     {
       "Date": "2022-10-12 19:00",
       "Rate": "19.9862"
+    },
+    {
+      "Date": "2022-10-12 20:00",
+      "Rate": "19.9954"
     }
   ]
 }
