--- a/indexRt.html
+++ b/indexRt.html
@@ -43435,6 +43435,10 @@
     {
       "Date": "2022-10-12 20:00",
       "Rate": "19.9954"
+    },
+    {
+      "Date": "2022-10-12 21:00",
+      "Rate": "19.9975"
     }
   ]
 }
