--- a/indexRt.html
+++ b/indexRt.html
@@ -43439,6 +43439,10 @@
     {
       "Date": "2022-10-12 21:00",
       "Rate": "19.9975"
+    },
+    {
+      "Date": "2022-10-12 22:00",
+      "Rate": "20.0013"
     }
   ]
 }
