--- a/indexRt.html
+++ b/indexRt.html
@@ -43443,6 +43443,10 @@
     {
       "Date": "2022-10-12 22:00",
       "Rate": "20.0013"
+    },
+    {
+      "Date": "2022-10-12 23:00",
+      "Rate": "20.0102"
     }
   ]
 }
