--- a/indexRt.html
+++ b/indexRt.html
@@ -43447,6 +43447,10 @@
     {
       "Date": "2022-10-12 23:00",
       "Rate": "20.0102"
+    },
+    {
+      "Date": "2022-10-13 00:00",
+      "Rate": "19.9883"
     }
   ]
 }
