commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43451,6 +43451,10 @@
     {
       "Date": "2022-10-13 00:00",
       "Rate": "19.9883"
+    },
+    {
+      "Date": "2022-10-13 01:00",
+      "Rate": "19.9982"
     }
   ]
 }
