--- a/indexRt.html
+++ b/indexRt.html
@@ -43455,6 +43455,10 @@
     {
       "Date": "2022-10-13 01:00",
       "Rate": "19.9982"
+    },
+    {
+      "Date": "2022-10-13 02:00",
+      "Rate": "19.9817"
     }
   ]
 }
