commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43459,6 +43459,10 @@
     {
       "Date": "2022-10-13 02:00",
       "Rate": "19.9817"
+    },
+    {
+      "Date": "2022-10-13 03:00",
+      "Rate": "19.9885"
     }
   ]
 }
