commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43463,6 +43463,10 @@
     {
       "Date": "2022-10-13 03:00",
       "Rate": "19.9885"
+    },
+    {
+      "Date": "2022-10-13 04:00",
+      "Rate": "19.9776"
     }
   ]
 }
