--- a/indexRt.html
+++ b/indexRt.html
@@ -43467,6 +43467,10 @@
     {
       "Date": "2022-10-13 04:00",
       "Rate": "19.9776"
+    },
+    {
+      "Date": "2022-10-13 05:00",
+      "Rate": "19.9594"
     }
   ]
 }
