commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43471,6 +43471,10 @@
     {
       "Date": "2022-10-13 05:00",
       "Rate": "19.9594"
+    },
+    {
+      "Date": "2022-10-13 06:00",
+      "Rate": "20.0605"
     }
   ]
 }
