commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43475,6 +43475,10 @@
     {
       "Date": "2022-10-13 06:00",
       "Rate": "20.0605"
+    },
+    {
+      "Date": "2022-10-13 07:00",
+      "Rate": "20.0888"
     }
   ]
 }
