commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43479,6 +43479,10 @@
     {
       "Date": "2022-10-13 07:00",
       "Rate": "20.0888"
+    },
+    {
+      "Date": "2022-10-13 08:00",
+      "Rate": "20.0620"
     }
   ]
 }
