commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43483,6 +43483,10 @@
     {
       "Date": "2022-10-13 08:00",
       "Rate": "20.0620"
+    },
+    {
+      "Date": "2022-10-13 09:00",
+      "Rate": "19.9950"
     }
   ]
 }
