--- a/indexRt.html
+++ b/indexRt.html
@@ -43487,6 +43487,10 @@
     {
       "Date": "2022-10-13 09:00",
       "Rate": "19.9950"
+    },
+    {
+      "Date": "2022-10-13 10:00",
+      "Rate": "19.9799"
     }
   ]
 }
