commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43491,6 +43491,10 @@
     {
       "Date": "2022-10-13 10:00",
       "Rate": "19.9799"
+    },
+    {
+      "Date": "2022-10-13 11:00",
+      "Rate": "19.9729"
     }
   ]
 }
