commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43495,6 +43495,10 @@
     {
       "Date": "2022-10-13 11:00",
       "Rate": "19.9729"
+    },
+    {
+      "Date": "2022-10-13 12:00",
+      "Rate": "19.9817"
     }
   ]
 }
