commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43499,6 +43499,10 @@
     {
       "Date": "2022-10-13 12:00",
       "Rate": "19.9817"
+    },
+    {
+      "Date": "2022-10-13 13:00",
+      "Rate": "19.9843"
     }
   ]
 }
