commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43503,6 +43503,10 @@
     {
       "Date": "2022-10-13 13:00",
       "Rate": "19.9843"
+    },
+    {
+      "Date": "2022-10-13 14:00",
+      "Rate": "19.9827"
     }
   ]
 }
