commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43507,6 +43507,10 @@
     {
       "Date": "2022-10-13 14:00",
       "Rate": "19.9827"
+    },
+    {
+      "Date": "2022-10-13 15:00",
+      "Rate": "19.9905"
     }
   ]
 }
