--- a/indexRt.html
+++ b/indexRt.html
@@ -43511,6 +43511,10 @@
     {
       "Date": "2022-10-13 15:00",
       "Rate": "19.9905"
+    },
+    {
+      "Date": "2022-10-13 16:00",
+      "Rate": "19.9853"
     }
   ]
 }
