commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43515,6 +43515,10 @@
     {
       "Date": "2022-10-13 16:00",
       "Rate": "19.9853"
+    },
+    {
+      "Date": "2022-10-13 17:00",
+      "Rate": "19.9937"
     }
   ]
 }
