commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43519,6 +43519,10 @@
     {
       "Date": "2022-10-13 17:00",
       "Rate": "19.9937"
+    },
+    {
+      "Date": "2022-10-13 18:00",
+      "Rate": "19.9871"
     }
   ]
 }
