commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43523,6 +43523,10 @@
     {
       "Date": "2022-10-13 18:00",
       "Rate": "19.9871"
+    },
+    {
+      "Date": "2022-10-13 19:00",
+      "Rate": "19.9677"
     }
   ]
 }
