commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43527,6 +43527,10 @@
     {
       "Date": "2022-10-13 19:00",
       "Rate": "19.9677"
+    },
+    {
+      "Date": "2022-10-13 20:00",
+      "Rate": "19.9725"
     }
   ]
 }
