commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43531,6 +43531,10 @@
     {
       "Date": "2022-10-13 20:00",
       "Rate": "19.9725"
+    },
+    {
+      "Date": "2022-10-13 21:00",
+      "Rate": "19.9759"
     }
   ]
 }
