commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43535,6 +43535,10 @@
     {
       "Date": "2022-10-13 21:00",
       "Rate": "19.9759"
+    },
+    {
+      "Date": "2022-10-13 22:00",
+      "Rate": "19.9792"
     }
   ]
 }
