commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43539,6 +43539,10 @@
     {
       "Date": "2022-10-13 22:00",
       "Rate": "19.9792"
+    },
+    {
+      "Date": "2022-10-13 23:00",
+      "Rate": "19.9774"
     }
   ]
 }
