commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43543,6 +43543,10 @@
     {
       "Date": "2022-10-13 23:00",
       "Rate": "19.9774"
+    },
+    {
+      "Date": "2022-10-14 00:00",
+      "Rate": "19.9731"
     }
   ]
 }
