--- a/indexRt.html
+++ b/indexRt.html
@@ -43547,6 +43547,10 @@
     {
       "Date": "2022-10-14 00:00",
       "Rate": "19.9731"
+    },
+    {
+      "Date": "2022-10-14 01:00",
+      "Rate": "19.9844"
     }
   ]
 }
