commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43551,6 +43551,10 @@
     {
       "Date": "2022-10-14 01:00",
       "Rate": "19.9844"
+    },
+    {
+      "Date": "2022-10-14 02:00",
+      "Rate": "20.0254"
     }
   ]
 }
