--- a/indexRt.html
+++ b/indexRt.html
@@ -43555,6 +43555,10 @@
     {
       "Date": "2022-10-14 02:00",
       "Rate": "20.0254"
+    },
+    {
+      "Date": "2022-10-14 03:00",
+      "Rate": "20.0336"
     }
   ]
 }
