--- a/indexRt.html
+++ b/indexRt.html
@@ -43559,6 +43559,10 @@
     {
       "Date": "2022-10-14 03:00",
       "Rate": "20.0336"
+    },
+    {
+      "Date": "2022-10-14 04:00",
+      "Rate": "20.0200"
     }
   ]
 }
