commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43563,6 +43563,10 @@
     {
       "Date": "2022-10-14 04:00",
       "Rate": "20.0200"
+    },
+    {
+      "Date": "2022-10-14 05:00",
+      "Rate": "20.0734"
     }
   ]
 }
