commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43567,6 +43567,10 @@
     {
       "Date": "2022-10-14 05:00",
       "Rate": "20.0734"
+    },
+    {
+      "Date": "2022-10-14 06:00",
+      "Rate": "19.9706"
     }
   ]
 }
