--- a/indexRt.html
+++ b/indexRt.html
@@ -43571,6 +43571,10 @@
     {
       "Date": "2022-10-14 06:00",
       "Rate": "19.9706"
+    },
+    {
+      "Date": "2022-10-14 07:00",
+      "Rate": "20.0576"
     }
   ]
 }
