commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43575,6 +43575,10 @@
     {
       "Date": "2022-10-14 07:00",
       "Rate": "20.0576"
+    },
+    {
+      "Date": "2022-10-14 08:00",
+      "Rate": "20.0495"
     }
   ]
 }
