commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43579,6 +43579,10 @@
     {
       "Date": "2022-10-14 08:00",
       "Rate": "20.0495"
+    },
+    {
+      "Date": "2022-10-14 09:00",
+      "Rate": "20.0711"
     }
   ]
 }
