commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43583,6 +43583,10 @@
     {
       "Date": "2022-10-14 09:00",
       "Rate": "20.0711"
+    },
+    {
+      "Date": "2022-10-14 10:00",
+      "Rate": "20.0770"
     }
   ]
 }
