commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43587,6 +43587,10 @@
     {
       "Date": "2022-10-14 10:00",
       "Rate": "20.0770"
+    },
+    {
+      "Date": "2022-10-14 11:00",
+      "Rate": "20.0710"
     }
   ]
 }
