commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43591,6 +43591,10 @@
     {
       "Date": "2022-10-14 11:00",
       "Rate": "20.0710"
+    },
+    {
+      "Date": "2022-10-14 12:00",
+      "Rate": "20.0812"
     }
   ]
 }
