--- a/indexRt.html
+++ b/indexRt.html
@@ -43595,6 +43595,10 @@
     {
       "Date": "2022-10-14 12:00",
       "Rate": "20.0812"
+    },
+    {
+      "Date": "2022-10-14 13:00",
+      "Rate": "20.0576"
     }
   ]
 }
