commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43599,6 +43599,10 @@
     {
       "Date": "2022-10-14 13:00",
       "Rate": "20.0576"
+    },
+    {
+      "Date": "2022-10-14 14:00",
+      "Rate": "20.0820"
     }
   ]
 }
