--- a/indexRt.html
+++ b/indexRt.html
@@ -43603,6 +43603,10 @@
     {
       "Date": "2022-10-14 14:00",
       "Rate": "20.0820"
+    },
+    {
+      "Date": "2022-10-14 15:00",
+      "Rate": "20.0820"
     }
   ]
 }
