commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43607,6 +43607,10 @@
     {
       "Date": "2022-10-14 15:00",
       "Rate": "20.0820"
+    },
+    {
+      "Date": "2022-10-14 16:00",
+      "Rate": "20.0820"
     }
   ]
 }
