--- a/indexRt.html
+++ b/indexRt.html
@@ -43611,6 +43611,10 @@
     {
       "Date": "2022-10-14 16:00",
       "Rate": "20.0820"
+    },
+    {
+      "Date": "2022-10-14 17:00",
+      "Rate": "20.0820"
     }
   ]
 }
