commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43615,6 +43615,10 @@
     {
       "Date": "2022-10-14 17:00",
       "Rate": "20.0820"
+    },
+    {
+      "Date": "2022-10-17 08:00",
+      "Rate": "19.9879"
     }
   ]
 }
