commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43619,6 +43619,10 @@
     {
       "Date": "2022-10-17 08:00",
       "Rate": "19.9879"
+    },
+    {
+      "Date": "2022-10-17 09:00",
+      "Rate": "19.9815"
     }
   ]
 }
