commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43623,6 +43623,10 @@
     {
       "Date": "2022-10-17 09:00",
       "Rate": "19.9815"
+    },
+    {
+      "Date": "2022-10-17 10:00",
+      "Rate": "19.9868"
     }
   ]
 }
