commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43627,6 +43627,10 @@
     {
       "Date": "2022-10-17 10:00",
       "Rate": "19.9868"
+    },
+    {
+      "Date": "2022-10-17 11:00",
+      "Rate": "20.0023"
     }
   ]
 }
