--- a/indexRt.html
+++ b/indexRt.html
@@ -43631,6 +43631,10 @@
     {
       "Date": "2022-10-17 11:00",
       "Rate": "20.0023"
+    },
+    {
+      "Date": "2022-10-17 12:00",
+      "Rate": "20.0103"
     }
   ]
 }
