commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43635,6 +43635,10 @@
     {
       "Date": "2022-10-17 12:00",
       "Rate": "20.0103"
+    },
+    {
+      "Date": "2022-10-17 13:00",
+      "Rate": "20.0175"
     }
   ]
 }
