commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43639,6 +43639,10 @@
     {
       "Date": "2022-10-17 13:00",
       "Rate": "20.0175"
+    },
+    {
+      "Date": "2022-10-17 14:00",
+      "Rate": "19.9969"
     }
   ]
 }
