commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43643,6 +43643,10 @@
     {
       "Date": "2022-10-17 14:00",
       "Rate": "19.9969"
+    },
+    {
+      "Date": "2022-10-17 15:00",
+      "Rate": "19.9961"
     }
   ]
 }
