commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43647,6 +43647,10 @@
     {
       "Date": "2022-10-17 15:00",
       "Rate": "19.9961"
+    },
+    {
+      "Date": "2022-10-17 16:00",
+      "Rate": "19.9895"
     }
   ]
 }
