commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43651,6 +43651,10 @@
     {
       "Date": "2022-10-17 16:00",
       "Rate": "19.9895"
+    },
+    {
+      "Date": "2022-10-17 17:00",
+      "Rate": "19.9862"
     }
   ]
 }
