--- a/indexRt.html
+++ b/indexRt.html
@@ -43655,6 +43655,10 @@
     {
       "Date": "2022-10-17 17:00",
       "Rate": "19.9862"
+    },
+    {
+      "Date": "2022-10-17 18:00",
+      "Rate": "19.9852"
     }
   ]
 }
