--- a/indexRt.html
+++ b/indexRt.html
@@ -43659,6 +43659,10 @@
     {
       "Date": "2022-10-17 18:00",
       "Rate": "19.9852"
+    },
+    {
+      "Date": "2022-10-17 19:00",
+      "Rate": "19.9853"
     }
   ]
 }
