commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43663,6 +43663,10 @@
     {
       "Date": "2022-10-17 19:00",
       "Rate": "19.9853"
+    },
+    {
+      "Date": "2022-10-18 06:00",
+      "Rate": "19.9823"
     }
   ]
 }
