commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43667,6 +43667,10 @@
     {
       "Date": "2022-10-18 06:00",
       "Rate": "19.9823"
+    },
+    {
+      "Date": "2022-10-18 07:00",
+      "Rate": "19.9869"
     }
   ]
 }
