commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43671,6 +43671,10 @@
     {
       "Date": "2022-10-18 07:00",
       "Rate": "19.9869"
+    },
+    {
+      "Date": "2022-10-18 08:00",
+      "Rate": "20.0092"
     }
   ]
 }
