commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43675,6 +43675,10 @@
     {
       "Date": "2022-10-18 08:00",
       "Rate": "20.0092"
+    },
+    {
+      "Date": "2022-10-18 09:00",
+      "Rate": "20.0413"
     }
   ]
 }
