--- a/indexRt.html
+++ b/indexRt.html
@@ -43679,6 +43679,10 @@
     {
       "Date": "2022-10-18 09:00",
       "Rate": "20.0413"
+    },
+    {
+      "Date": "2022-10-18 10:00",
+      "Rate": "20.0370"
     }
   ]
 }
