commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43683,6 +43683,10 @@
     {
       "Date": "2022-10-18 10:00",
       "Rate": "20.0370"
+    },
+    {
+      "Date": "2022-10-18 11:00",
+      "Rate": "20.0354"
     }
   ]
 }
