--- a/indexRt.html
+++ b/indexRt.html
@@ -43687,6 +43687,10 @@
     {
       "Date": "2022-10-18 11:00",
       "Rate": "20.0354"
+    },
+    {
+      "Date": "2022-10-18 12:00",
+      "Rate": "20.0498"
     }
   ]
 }
