commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43691,6 +43691,10 @@
     {
       "Date": "2022-10-18 12:00",
       "Rate": "20.0498"
+    },
+    {
+      "Date": "2022-10-18 13:00",
+      "Rate": "20.0261"
     }
   ]
 }
