commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43695,6 +43695,10 @@
     {
       "Date": "2022-10-18 13:00",
       "Rate": "20.0261"
+    },
+    {
+      "Date": "2022-10-18 14:00",
+      "Rate": "20.0275"
     }
   ]
 }
