commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43699,6 +43699,10 @@
     {
       "Date": "2022-10-18 14:00",
       "Rate": "20.0275"
+    },
+    {
+      "Date": "2022-10-18 15:00",
+      "Rate": "20.0303"
     }
   ]
 }
