--- a/indexRt.html
+++ b/indexRt.html
@@ -43703,6 +43703,10 @@
     {
       "Date": "2022-10-18 15:00",
       "Rate": "20.0303"
+    },
+    {
+      "Date": "2022-10-18 16:00",
+      "Rate": "20.0278"
     }
   ]
 }
