commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43707,6 +43707,10 @@
     {
       "Date": "2022-10-18 16:00",
       "Rate": "20.0278"
+    },
+    {
+      "Date": "2022-10-18 17:00",
+      "Rate": "20.0229"
     }
   ]
 }
