commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43711,6 +43711,10 @@
     {
       "Date": "2022-10-18 17:00",
       "Rate": "20.0229"
+    },
+    {
+      "Date": "2022-10-19 07:00",
+      "Rate": "20.1384"
     }
   ]
 }
