commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43715,6 +43715,10 @@
     {
       "Date": "2022-10-19 07:00",
       "Rate": "20.1384"
+    },
+    {
+      "Date": "2022-10-19 08:00",
+      "Rate": "20.1191"
     }
   ]
 }
