commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43719,6 +43719,10 @@
     {
       "Date": "2022-10-19 08:00",
       "Rate": "20.1191"
+    },
+    {
+      "Date": "2022-10-19 09:00",
+      "Rate": "20.1291"
     }
   ]
 }
