commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43723,6 +43723,10 @@
     {
       "Date": "2022-10-19 09:00",
       "Rate": "20.1291"
+    },
+    {
+      "Date": "2022-10-19 10:00",
+      "Rate": "20.1315"
     }
   ]
 }
