commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43727,6 +43727,10 @@
     {
       "Date": "2022-10-19 10:00",
       "Rate": "20.1315"
+    },
+    {
+      "Date": "2022-10-19 11:00",
+      "Rate": "20.1250"
     }
   ]
 }
