commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43731,6 +43731,10 @@
     {
       "Date": "2022-10-19 11:00",
       "Rate": "20.1250"
+    },
+    {
+      "Date": "2022-10-19 12:00",
+      "Rate": "20.1204"
     }
   ]
 }
