commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43735,6 +43735,10 @@
     {
       "Date": "2022-10-19 12:00",
       "Rate": "20.1204"
+    },
+    {
+      "Date": "2022-10-19 13:00",
+      "Rate": "20.1071"
     }
   ]
 }
