commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43739,6 +43739,10 @@
     {
       "Date": "2022-10-19 13:00",
       "Rate": "20.1071"
+    },
+    {
+      "Date": "2022-10-19 14:00",
+      "Rate": "20.1082"
     }
   ]
 }
