--- a/indexRt.html
+++ b/indexRt.html
@@ -43743,6 +43743,10 @@
     {
       "Date": "2022-10-19 14:00",
       "Rate": "20.1082"
+    },
+    {
+      "Date": "2022-10-19 15:00",
+      "Rate": "20.1136"
     }
   ]
 }
