commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43747,6 +43747,10 @@
     {
       "Date": "2022-10-19 15:00",
       "Rate": "20.1136"
+    },
+    {
+      "Date": "2022-10-19 16:00",
+      "Rate": "20.1255"
     }
   ]
 }
