--- a/indexRt.html
+++ b/indexRt.html
@@ -43751,6 +43751,10 @@
     {
       "Date": "2022-10-19 16:00",
       "Rate": "20.1255"
+    },
+    {
+      "Date": "2022-10-19 17:00",
+      "Rate": "20.1297"
     }
   ]
 }
