commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43755,6 +43755,10 @@
     {
       "Date": "2022-10-19 17:00",
       "Rate": "20.1297"
+    },
+    {
+      "Date": "2022-10-19 18:00",
+      "Rate": "20.1236"
     }
   ]
 }
