commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43759,6 +43759,10 @@
     {
       "Date": "2022-10-19 18:00",
       "Rate": "20.1236"
+    },
+    {
+      "Date": "2022-10-19 19:00",
+      "Rate": "20.1437"
     }
   ]
 }
