--- a/indexRt.html
+++ b/indexRt.html
@@ -43763,6 +43763,10 @@
     {
       "Date": "2022-10-19 19:00",
       "Rate": "20.1437"
+    },
+    {
+      "Date": "2022-10-19 20:00",
+      "Rate": "20.1414"
     }
   ]
 }
