--- a/indexRt.html
+++ b/indexRt.html
@@ -43767,6 +43767,10 @@
     {
       "Date": "2022-10-19 20:00",
       "Rate": "20.1414"
+    },
+    {
+      "Date": "2022-10-19 21:00",
+      "Rate": "20.1557"
     }
   ]
 }
