commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43771,6 +43771,10 @@
     {
       "Date": "2022-10-19 21:00",
       "Rate": "20.1557"
+    },
+    {
+      "Date": "2022-10-19 22:00",
+      "Rate": "20.1377"
     }
   ]
 }
