--- a/indexRt.html
+++ b/indexRt.html
@@ -43775,6 +43775,10 @@
     {
       "Date": "2022-10-19 22:00",
       "Rate": "20.1377"
+    },
+    {
+      "Date": "2022-10-19 23:00",
+      "Rate": "20.1249"
     }
   ]
 }
