--- a/indexRt.html
+++ b/indexRt.html
@@ -43779,6 +43779,10 @@
     {
       "Date": "2022-10-19 23:00",
       "Rate": "20.1249"
+    },
+    {
+      "Date": "2022-10-20 00:00",
+      "Rate": "20.1336"
     }
   ]
 }
