--- a/indexRt.html
+++ b/indexRt.html
@@ -43783,6 +43783,10 @@
     {
       "Date": "2022-10-20 00:00",
       "Rate": "20.1336"
+    },
+    {
+      "Date": "2022-10-20 01:00",
+      "Rate": "20.1254"
     }
   ]
 }
