--- a/indexRt.html
+++ b/indexRt.html
@@ -43787,6 +43787,10 @@
     {
       "Date": "2022-10-20 01:00",
       "Rate": "20.1254"
+    },
+    {
+      "Date": "2022-10-20 02:00",
+      "Rate": "20.1201"
     }
   ]
 }
