commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43791,6 +43791,10 @@
     {
       "Date": "2022-10-20 02:00",
       "Rate": "20.1201"
+    },
+    {
+      "Date": "2022-10-20 03:00",
+      "Rate": "20.1157"
     }
   ]
 }
