commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43795,6 +43795,10 @@
     {
       "Date": "2022-10-20 03:00",
       "Rate": "20.1157"
+    },
+    {
+      "Date": "2022-10-20 04:00",
+      "Rate": "20.0921"
     }
   ]
 }
