--- a/indexRt.html
+++ b/indexRt.html
@@ -43799,6 +43799,10 @@
     {
       "Date": "2022-10-20 04:00",
       "Rate": "20.0921"
+    },
+    {
+      "Date": "2022-10-20 05:00",
+      "Rate": "20.0851"
     }
   ]
 }
