--- a/indexRt.html
+++ b/indexRt.html
@@ -43803,6 +43803,10 @@
     {
       "Date": "2022-10-20 05:00",
       "Rate": "20.0851"
+    },
+    {
+      "Date": "2022-10-20 06:00",
+      "Rate": "20.0973"
     }
   ]
 }
