commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43807,6 +43807,10 @@
     {
       "Date": "2022-10-20 06:00",
       "Rate": "20.0973"
+    },
+    {
+      "Date": "2022-10-20 07:00",
+      "Rate": "20.0737"
     }
   ]
 }
