--- a/indexRt.html
+++ b/indexRt.html
@@ -43811,6 +43811,10 @@
     {
       "Date": "2022-10-20 07:00",
       "Rate": "20.0737"
+    },
+    {
+      "Date": "2022-10-20 08:00",
+      "Rate": "20.0391"
     }
   ]
 }
