commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43815,6 +43815,10 @@
     {
       "Date": "2022-10-20 08:00",
       "Rate": "20.0391"
+    },
+    {
+      "Date": "2022-10-20 09:00",
+      "Rate": "20.0340"
     }
   ]
 }
