commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43819,6 +43819,10 @@
     {
       "Date": "2022-10-20 09:00",
       "Rate": "20.0340"
+    },
+    {
+      "Date": "2022-10-20 10:00",
+      "Rate": "20.0464"
     }
   ]
 }
