commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43823,6 +43823,10 @@
     {
       "Date": "2022-10-20 10:00",
       "Rate": "20.0464"
+    },
+    {
+      "Date": "2022-10-20 11:00",
+      "Rate": "20.0627"
     }
   ]
 }
