commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43827,6 +43827,10 @@
     {
       "Date": "2022-10-20 11:00",
       "Rate": "20.0627"
+    },
+    {
+      "Date": "2022-10-20 12:00",
+      "Rate": "20.0576"
     }
   ]
 }
