commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43831,6 +43831,10 @@
     {
       "Date": "2022-10-20 12:00",
       "Rate": "20.0576"
+    },
+    {
+      "Date": "2022-10-20 13:00",
+      "Rate": "20.0536"
     }
   ]
 }
