--- a/indexRt.html
+++ b/indexRt.html
@@ -43835,6 +43835,10 @@
     {
       "Date": "2022-10-20 13:00",
       "Rate": "20.0536"
+    },
+    {
+      "Date": "2022-10-20 14:00",
+      "Rate": "20.0442"
     }
   ]
 }
