commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43839,6 +43839,10 @@
     {
       "Date": "2022-10-20 14:00",
       "Rate": "20.0442"
+    },
+    {
+      "Date": "2022-10-20 15:00",
+      "Rate": "20.0523"
     }
   ]
 }
