--- a/indexRt.html
+++ b/indexRt.html
@@ -43843,6 +43843,10 @@
     {
       "Date": "2022-10-20 15:00",
       "Rate": "20.0523"
+    },
+    {
+      "Date": "2022-10-20 16:00",
+      "Rate": "20.0476"
     }
   ]
 }
