commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43847,6 +43847,10 @@
     {
       "Date": "2022-10-20 16:00",
       "Rate": "20.0476"
+    },
+    {
+      "Date": "2022-10-20 17:00",
+      "Rate": "20.0424"
     }
   ]
 }
