commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43851,6 +43851,10 @@
     {
       "Date": "2022-10-20 17:00",
       "Rate": "20.0424"
+    },
+    {
+      "Date": "2022-10-21 07:00",
+      "Rate": "19.9818"
     }
   ]
 }
