--- a/indexRt.html
+++ b/indexRt.html
@@ -43855,6 +43855,10 @@
     {
       "Date": "2022-10-21 07:00",
       "Rate": "19.9818"
+    },
+    {
+      "Date": "2022-10-21 07:02",
+      "Rate": "19.9818"
     }
   ]
 }
