commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43859,6 +43859,10 @@
     {
       "Date": "2022-10-21 07:02",
       "Rate": "19.9818"
+    },
+    {
+      "Date": "2022-10-21 08:00",
+      "Rate": "19.9789"
     }
   ]
 }
