--- a/indexRt.html
+++ b/indexRt.html
@@ -43863,6 +43863,10 @@
     {
       "Date": "2022-10-21 08:00",
       "Rate": "19.9789"
+    },
+    {
+      "Date": "2022-10-21 08:02",
+      "Rate": "19.9789"
     }
   ]
 }
