--- a/indexRt.html
+++ b/indexRt.html
@@ -43867,6 +43867,10 @@
     {
       "Date": "2022-10-21 08:02",
       "Rate": "19.9789"
+    },
+    {
+      "Date": "2022-10-21 09:00",
+      "Rate": "19.8980"
     }
   ]
 }
