--- a/indexRt.html
+++ b/indexRt.html
@@ -43871,6 +43871,10 @@
     {
       "Date": "2022-10-21 09:00",
       "Rate": "19.8980"
+    },
+    {
+      "Date": "2022-10-21 09:02",
+      "Rate": "19.8980"
     }
   ]
 }
