commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43875,6 +43875,10 @@
     {
       "Date": "2022-10-21 09:02",
       "Rate": "19.8980"
+    },
+    {
+      "Date": "2022-10-21 10:00",
+      "Rate": "19.9468"
     }
   ]
 }
