commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43879,6 +43879,10 @@
     {
       "Date": "2022-10-21 10:00",
       "Rate": "19.9468"
+    },
+    {
+      "Date": "2022-10-21 10:02",
+      "Rate": "19.9468"
     }
   ]
 }
