commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43883,6 +43883,10 @@
     {
       "Date": "2022-10-21 10:02",
       "Rate": "19.9468"
+    },
+    {
+      "Date": "2022-10-21 11:00",
+      "Rate": "19.9487"
     }
   ]
 }
