commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43887,6 +43887,10 @@
     {
       "Date": "2022-10-21 11:00",
       "Rate": "19.9487"
+    },
+    {
+      "Date": "2022-10-21 11:02",
+      "Rate": "19.9487"
     }
   ]
 }
