commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43891,6 +43891,10 @@
     {
       "Date": "2022-10-21 11:02",
       "Rate": "19.9487"
+    },
+    {
+      "Date": "2022-10-21 12:00",
+      "Rate": "19.9355"
     }
   ]
 }
