commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43895,6 +43895,10 @@
     {
       "Date": "2022-10-21 12:00",
       "Rate": "19.9355"
+    },
+    {
+      "Date": "2022-10-21 12:02",
+      "Rate": "19.9355"
     }
   ]
 }
