commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43899,6 +43899,10 @@
     {
       "Date": "2022-10-21 12:02",
       "Rate": "19.9355"
+    },
+    {
+      "Date": "2022-10-21 13:00",
+      "Rate": "19.9201"
     }
   ]
 }
