commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43907,6 +43907,10 @@
     {
       "Date": "2022-10-21 13:02",
       "Rate": "19.9201"
+    },
+    {
+      "Date": "2022-10-21 14:00",
+      "Rate": "19.9222"
     }
   ]
 }
