commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43911,6 +43911,10 @@
     {
       "Date": "2022-10-21 14:00",
       "Rate": "19.9222"
+    },
+    {
+      "Date": "2022-10-21 14:02",
+      "Rate": "19.9222"
     }
   ]
 }
