commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43915,6 +43915,10 @@
     {
       "Date": "2022-10-21 14:02",
       "Rate": "19.9222"
+    },
+    {
+      "Date": "2022-10-21 15:00",
+      "Rate": "19.9198"
     }
   ]
 }
