commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43919,6 +43919,10 @@
     {
       "Date": "2022-10-21 15:00",
       "Rate": "19.9198"
+    },
+    {
+      "Date": "2022-10-21 15:02",
+      "Rate": "19.9198"
     }
   ]
 }
