--- a/indexRt.html
+++ b/indexRt.html
@@ -43923,6 +43923,10 @@
     {
       "Date": "2022-10-21 15:02",
       "Rate": "19.9198"
+    },
+    {
+      "Date": "2022-10-21 16:00",
+      "Rate": "19.9198"
     }
   ]
 }
