--- a/indexRt.html
+++ b/indexRt.html
@@ -43927,6 +43927,10 @@
     {
       "Date": "2022-10-21 16:00",
       "Rate": "19.9198"
+    },
+    {
+      "Date": "2022-10-21 16:02",
+      "Rate": "19.9198"
     }
   ]
 }
