--- a/indexRt.html
+++ b/indexRt.html
@@ -43931,6 +43931,10 @@
     {
       "Date": "2022-10-21 16:02",
       "Rate": "19.9198"
+    },
+    {
+      "Date": "2022-10-21 17:00",
+      "Rate": "19.9198"
     }
   ]
 }
