commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43935,6 +43935,10 @@
     {
       "Date": "2022-10-21 17:00",
       "Rate": "19.9198"
+    },
+    {
+      "Date": "2022-10-21 17:02",
+      "Rate": "19.9198"
     }
   ]
 }
