commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43939,6 +43939,10 @@
     {
       "Date": "2022-10-21 17:02",
       "Rate": "19.9198"
+    },
+    {
+      "Date": "2022-10-24 08:00",
+      "Rate": "19.9480"
     }
   ]
 }
