commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43943,6 +43943,10 @@
     {
       "Date": "2022-10-24 08:00",
       "Rate": "19.9480"
+    },
+    {
+      "Date": "2022-10-24 09:00",
+      "Rate": "19.9471"
     }
   ]
 }
