--- a/indexRt.html
+++ b/indexRt.html
@@ -43947,6 +43947,10 @@
     {
       "Date": "2022-10-24 09:00",
       "Rate": "19.9471"
+    },
+    {
+      "Date": "2022-10-24 10:00",
+      "Rate": "19.9401"
     }
   ]
 }
