commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43951,6 +43951,10 @@
     {
       "Date": "2022-10-24 10:00",
       "Rate": "19.9401"
+    },
+    {
+      "Date": "2022-10-24 11:00",
+      "Rate": "19.9368"
     }
   ]
 }
