--- a/indexRt.html
+++ b/indexRt.html
@@ -43955,6 +43955,10 @@
     {
       "Date": "2022-10-24 11:00",
       "Rate": "19.9368"
+    },
+    {
+      "Date": "2022-10-24 12:00",
+      "Rate": "19.9322"
     }
   ]
 }
