commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43959,6 +43959,10 @@
     {
       "Date": "2022-10-24 12:00",
       "Rate": "19.9322"
+    },
+    {
+      "Date": "2022-10-24 13:00",
+      "Rate": "19.9304"
     }
   ]
 }
