commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43963,6 +43963,10 @@
     {
       "Date": "2022-10-24 13:00",
       "Rate": "19.9304"
+    },
+    {
+      "Date": "2022-10-24 14:00",
+      "Rate": "19.9335"
     }
   ]
 }
