--- a/indexRt.html
+++ b/indexRt.html
@@ -43967,6 +43967,10 @@
     {
       "Date": "2022-10-24 14:00",
       "Rate": "19.9335"
+    },
+    {
+      "Date": "2022-10-24 15:00",
+      "Rate": "19.9464"
     }
   ]
 }
