commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43971,6 +43971,10 @@
     {
       "Date": "2022-10-24 15:00",
       "Rate": "19.9464"
+    },
+    {
+      "Date": "2022-10-24 16:00",
+      "Rate": "19.9287"
     }
   ]
 }
