--- a/indexRt.html
+++ b/indexRt.html
@@ -43975,6 +43975,10 @@
     {
       "Date": "2022-10-24 16:00",
       "Rate": "19.9287"
+    },
+    {
+      "Date": "2022-10-24 17:00",
+      "Rate": "19.9256"
     }
   ]
 }
