commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43979,6 +43979,10 @@
     {
       "Date": "2022-10-24 17:00",
       "Rate": "19.9256"
+    },
+    {
+      "Date": "2022-10-24 18:00",
+      "Rate": "19.9201"
     }
   ]
 }
