--- a/indexRt.html
+++ b/indexRt.html
@@ -43983,6 +43983,10 @@
     {
       "Date": "2022-10-24 18:00",
       "Rate": "19.9201"
+    },
+    {
+      "Date": "2022-10-24 19:00",
+      "Rate": "19.9278"
     }
   ]
 }
