commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43987,6 +43987,10 @@
     {
       "Date": "2022-10-24 19:00",
       "Rate": "19.9278"
+    },
+    {
+      "Date": "2022-10-24 20:00",
+      "Rate": "19.9282"
     }
   ]
 }
