commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43991,6 +43991,10 @@
     {
       "Date": "2022-10-24 20:00",
       "Rate": "19.9282"
+    },
+    {
+      "Date": "2022-10-24 21:00",
+      "Rate": "19.9188"
     }
   ]
 }
