commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43995,6 +43995,10 @@
     {
       "Date": "2022-10-24 21:00",
       "Rate": "19.9188"
+    },
+    {
+      "Date": "2022-10-24 22:00",
+      "Rate": "19.9241"
     }
   ]
 }
