commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43999,6 +43999,10 @@
     {
       "Date": "2022-10-24 22:00",
       "Rate": "19.9241"
+    },
+    {
+      "Date": "2022-10-24 23:00",
+      "Rate": "19.9302"
     }
   ]
 }
