--- a/indexRt.html
+++ b/indexRt.html
@@ -44003,6 +44003,10 @@
     {
       "Date": "2022-10-24 23:00",
       "Rate": "19.9302"
+    },
+    {
+      "Date": "2022-10-25 00:00",
+      "Rate": "19.9193"
     }
   ]
 }
