commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44007,6 +44007,10 @@
     {
       "Date": "2022-10-25 00:00",
       "Rate": "19.9193"
+    },
+    {
+      "Date": "2022-10-25 01:00",
+      "Rate": "19.9062"
     }
   ]
 }
