commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44011,6 +44011,10 @@
     {
       "Date": "2022-10-25 01:00",
       "Rate": "19.9062"
+    },
+    {
+      "Date": "2022-10-25 02:00",
+      "Rate": "19.9001"
     }
   ]
 }
