commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44015,6 +44015,10 @@
     {
       "Date": "2022-10-25 02:00",
       "Rate": "19.9001"
+    },
+    {
+      "Date": "2022-10-25 03:00",
+      "Rate": "19.9023"
     }
   ]
 }
