--- a/indexRt.html
+++ b/indexRt.html
@@ -44019,6 +44019,10 @@
     {
       "Date": "2022-10-25 03:00",
       "Rate": "19.9023"
+    },
+    {
+      "Date": "2022-10-25 04:00",
+      "Rate": "19.9236"
     }
   ]
 }
