--- a/indexRt.html
+++ b/indexRt.html
@@ -44023,6 +44023,10 @@
     {
       "Date": "2022-10-25 04:00",
       "Rate": "19.9236"
+    },
+    {
+      "Date": "2022-10-25 05:00",
+      "Rate": "19.9196"
     }
   ]
 }
