--- a/indexRt.html
+++ b/indexRt.html
@@ -44027,6 +44027,10 @@
     {
       "Date": "2022-10-25 05:00",
       "Rate": "19.9196"
+    },
+    {
+      "Date": "2022-10-25 06:00",
+      "Rate": "19.9139"
     }
   ]
 }
