commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44031,6 +44031,10 @@
     {
       "Date": "2022-10-25 06:00",
       "Rate": "19.9139"
+    },
+    {
+      "Date": "2022-10-25 07:00",
+      "Rate": "19.8636"
     }
   ]
 }
